increase margin buttom to avoid overlapping

--- a/Assets/css/search.css
+++ b/Assets/css/search.css
@@ -25,7 +25,6 @@ body {
   flex: 0 0 40%;
   width: 40%;
   padding: 2rem;
-  background-color: whitesmoke;
   overflow-y: auto;
 }
 
@@ -89,6 +88,7 @@ body {
   gap: 20px;
   overflow-y: visible;
   max-height: calc(100vh - 150px); /* Adjust this value as needed */
+  margin-bottom: 60px;
 }
 
 .article {
@@ -165,8 +165,8 @@ iframe {
   left: 0;
   width: 100%;
   padding: 10px;
-  background-color: #fff; /* Optional: Add background to ensure buttons are visible */
-  box-shadow: 0 -2px 5px rgba(0, 0, 0, 0.1); /* Optional: Add shadow for visual separation */
+  background-color: #ffffff1c;
+  box-shadow: 0 -2px 5px rgba(0, 0, 0, 0.1);
   text-align: center;
   z-index: 1000;
 }
@@ -174,6 +174,7 @@ iframe {
 #pagination-controls button {
   margin: 0 10px;
 }
+
 
 @media screen and (max-width: 850px) {
 
